@@ -497,6 +497,8 @@ internal.monitor.diskUsage.monitorDirectories=false
 internal.monitor.diskUsage.monitorSql=false
 # monitor TSDB (NoSQL) database directory size
 internal.monitor.diskUsage.monitorTsdb=false
+# enables getting operating system, process, and hardware information via the OSHI native library
+internal.monitor.enableOperatingSystemInfo=true
 
 # These settings are used in the default log4j2.xml file included with Mango. For more control, specify your own
 # log4j2.xml configuration file using the log4j2.configurationFile property.
